# tui-icon

./: Cargo.toml  README.md
assets/: converter.sh
assets_16/: clone-solid_16x16.pbm  code-branch-solid_16x16.pbm  code-branch_16x16.pbm  copy-solid_16x16.pbm  cut-solid_16x16.pbm  edit-solid_16x16.pbm  eraser-solid_16x16.pbm  file-solid_16x16.pbm  folder-open-solid_16x16.pbm  folder-regular_16x16.pbm  folder-solid_16x16.pbm  git-alt_16x16.pbm  git_branch_c.pbm  paperclip-solid_16x16.pbm  paragraph-solid_16x16.pbm  pencil-alt-solid_16x16.pbm  print-solid_16x16.pbm  quote-left-solid_16x16.pbm  toolbox-solid_16x16.pbm  tools-solid_16x16.pbm  trash-alt-solid_16x16.pbm  trash-restore-alt-solid_16x16.pbm  trash-restore-solid_16x16.pbm  trash-solid_16x16.pbm  undo-solid_16x16.pbm  wrench-solid_16x16.pbm
src/: demo.rs  lib.rs  tui_icon.rs
tests/: icon_tests.rs
