[package]
name = "tui-icon"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ogranada/tui-markup"
repository = "https://github.com/ogranada/tui-markup"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
rand = "0.8.5"
tui = "0.19.0"

[[bin]]
edition = "2021"
name = "tui-markup-gen"
path = "src/demo.rs"
